--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ header {
 
 .logo {
     width: 130px;
+    transition: 100ms;
+    cursor: pointer;
+}
+
+.logo:hover {
+    transform: scale(1.1);
 }
 
 .logo img {
@@ -42,7 +48,7 @@ header {
 .head-nav-item {
     color: white;
     text-decoration: none;
-    margin: 5px;
+    margin: 5px 10px;
     font-size: 0.8em;
     font-weight: bold;
     transition: 100ms;
