--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ body {
     flex-direction: column;
 }
 
-
+@media (max-width: 680px) {
+    .head-nav, .head-nav-item {
+        display: none;
+    }
+}
 
 
 /*Header*/
@@ -71,4 +75,13 @@ header {
 .redes-sociais > figure > a > img:hover {
     transform: scale(1.1);
     filter: contrast(50%);
+}
+
+
+/*Main*/
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
