--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    border: none;
     font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
 }
 
@@ -22,11 +23,16 @@ body {
 
 header {
     display: flex;
-    padding: 10px;
+    position: fixed;
+    padding: 10px 0px;
     background-color: black;
     align-items: center;
     justify-content: space-between;
     height: 8vh;
+    width: 100%;
+    overflow: hidden;
+    z-index: 100;
+    transition: height 0.3s ease-in-out;
 }
 
 .logo {
@@ -55,7 +61,7 @@ header {
     margin: 5px 10px;
     font-size: 0.8em;
     font-weight: bold;
-    transition: 100ms;
+    transition: 50ms;
 }
 
 .head-nav-item:hover {
@@ -85,3 +91,54 @@ main {
     flex-direction: column;
     justify-content: center;
 }
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 8vh);
+    overflow: hidden;
+    margin-top: 8vh;
+    background-color: black;
+}
+
+.slider {
+    display: flex;
+    transition: opacity 0.6s ease-in-out;
+  }
+  
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 1;
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
+  }
+
+.slide > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.4);
+  }
+
+.slider-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.158);
+    color: rgba(255, 255, 255, 0.644);
+    border-radius: 3px;
+    font-size: 20px;
+    z-index: 1;
+  }
+
+.slider-button.prev {
+    left: 5px;
+  }
+
+.slider-button.next {
+    right: 5px;
+  }
